fix media text block spacing

--- a/src/public/scss/block-shims.scss
+++ b/src/public/scss/block-shims.scss
@@ -33,19 +33,37 @@ figure.table--bordered table {
 .wp-block-media-text .wp-block-media-text__content {
   padding: 0 !important;
 }
-@media ( min-width: 601px){
-  .wp-block-media-text.margin .wp-block-media-text__media {
-    margin-right: 1rem;
+@media ( max-width: 600px){
+  .wp-block-media-text.is-stacked-on-mobile .wp-block-media-text__content {
+    margin-left: 0;
   }
-  .wp-block-media-text.margin--small .wp-block-media-text__media {
-    margin-right: .5rem;
+  .wp-block-media-text.is-stacked-on-mobile.margin--flush .wp-block-media-text__content {
+    margin-left: 0;
   }
-  .wp-block-media-text.margin--large .wp-block-media-text__media {
-    margin-right: 1.5rem;
+  .wp-block-media-text.is-stacked-on-mobile.margin--small .wp-block-media-text__content {
+    margin-left: 0;
   }
-  .wp-block-media-text.margin--xlarge .wp-block-media-text__media {
-    margin-right: 2rem;
+  .wp-block-media-text.is-stacked-on-mobile.margin--large .wp-block-media-text__content {
+    margin-left: 0
   }
+  .wp-block-media-text.is-stacked-on-mobile.margin--xlarge .wp-block-media-text__content {
+    margin-left: 0;
+  }
+}
+.wp-block-media-text .wp-block-media-text__content {
+  margin-left: 1rem;
+}
+.wp-block-media-text.margin--flush .wp-block-media-text__content {
+  margin-left: 0;
+}
+.wp-block-media-text.margin--small .wp-block-media-text__content {
+  margin-left: .5rem;
+}
+.wp-block-media-text.margin--large .wp-block-media-text__content {
+  margin-left: 1.5rem;
+}
+.wp-block-media-text.margin--xlarge .wp-block-media-text__content {
+  margin-left: 2rem;
 }
 
 @media (max-width: 479px) {
